--- a/src/Global.css
+++ b/src/Global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz@8..144&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -5,6 +7,7 @@
     outline: none;
     list-style: none;
     text-decoration: none;
+    font-family: 'Roboto Serif', serif;
   }
   
   html {
