--- a/src/Global.css
+++ b/src/Global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz@8..144&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 * {
     padding: 0;
@@ -7,7 +7,7 @@
     outline: none;
     list-style: none;
     text-decoration: none;
-    font-family: 'Roboto Serif', serif;
+    font-family: 'Roboto Slab', serif;
   }
   
   html {
